tests/neg/i5037.scala
class Foo {
abstract override var // error
}